--- a/src/themes/Space/App.styl
+++ b/src/themes/Space/App.styl
@@ -7,6 +7,8 @@
   #App {
     position: relative;
     height: fit-content;
+    color: white;
+    font-size: 14px;
   }
   #content > * {
     border: 8px inset lightgray;
@@ -27,7 +29,7 @@
     position: fixed;
     top: 0px;
     left: 0px;
-    background-color: gainsboro;
+    background-color: deep;
     width: 100vw;
     height: 30px;
     display: flex;
