--- a/src/themes/Space/App.styl
+++ b/src/themes/Space/App.styl
@@ -1,14 +1,34 @@
   @import "global_variables"
-    
-  :global(button) {
-    border: 0px solid transparent;
-    box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.5);
+  
+  :global(*) {
+    font-size: 12px;
   }
+  :global(button) {
+    font-size: 12px;
+    background-color: dark;
+    border: 1px solid light;
+    box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.5);
+    color: light;
+
+  }
+  :global(button:hover) {
+    font-size: 14px;
+  }
+
+  .border {
+    border: 1px solid light;
+  }
+
   #App {
     position: relative;
-    height: fit-content;
+    height: 100vh;
     color: white;
-    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+  }
+  #content {
+    margin: 4px;
+    flex-grow: 1
   }
   #content > * {
     border: 8px inset lightgray;
@@ -39,7 +59,7 @@
   #command_palette {
     display: none;
 
-    position: fixed;
+    position: sticky;
     margin-top: 160px;
     background-color: rgba(54, 54, 54, 1);
 
