--- a/src/themes/Space/App.styl
+++ b/src/themes/Space/App.styl
@@ -1,21 +1,27 @@
   @import "global_variables"
   
   :global(*) {
-    font-size: 12px;
+    font-size: 14px;
+    box-sizing: border-box;
   }
   :global(button) {
-    font-size: 12px;
+    
+    font-size: 14px;
     background-color: dark;
-    border: 1px solid light;
-    box-shadow: inset 1px 1px 2px 0px rgba(0,0,0,0.5);
     color: light;
+    border: none;
+    box-shadow: inset 0px 0px 0px 1px light;
 
   }
   :global(button:hover) {
-    font-size: 14px;
+    box-shadow: inset 0px 0px 0px 2px light;
+  }
+  :global(button:active) {
+    background-color: light;
+    color: dark;
   }
 
-  .border {
+  :global(.border) {
     border: 1px solid light;
   }
 
@@ -27,7 +33,7 @@
     flex-direction: column;
   }
   #content {
-    margin: 4px;
+    margin: 8px;
     flex-grow: 1
   }
   #content > * {
@@ -46,7 +52,7 @@
     transition: none;
   }
   #keyboard_toolbar {
-    position: fixed;
+    position: sticky;
     top: 0px;
     left: 0px;
     background-color: deep;
