--- a/src/themes/Space/App.styl
+++ b/src/themes/Space/App.styl
@@ -25,6 +25,11 @@
     border: 1px solid light;
   }
 
+  :global(textarea:focus) {
+    outline: none;
+    border-color: light;
+  }
+
   #App {
     position: relative;
     height: 100vh;
