--- a/src/themes/Space/App.styl
+++ b/src/themes/Space/App.styl
@@ -25,9 +25,8 @@
     border: 1px solid light;
   }
 
-  :global(textarea:focus) {
-    outline: none;
-    border-color: light;
+  :global(*:focus) {
+    outline: 1px solid light;
   }
 
   #App {
