--- a/src/themes/Space/App.styl
+++ b/src/themes/Space/App.styl
@@ -22,7 +22,8 @@
   }
 
   :global(.border) {
-    border: 1px solid light;
+    //border: 1px solid light;
+    box-shadow: inset 0px 0px 0px 1px light;
   }
 
   :global(*:focus) {
