--- a/src/themes/Space/App.styl
+++ b/src/themes/Space/App.styl
@@ -3,6 +3,7 @@
   :global(*) {
     font-size: 14px;
     box-sizing: border-box;
+    
   }
   :global(button) {
     
@@ -23,7 +24,8 @@
 
   :global(.border) {
     //border: 1px solid light;
-    box-shadow: inset 0px 0px 0px 1px light;
+    box-shadow: inset 0px 0px 0px 1px light
+    //box-shadow: inset 0px 0px 0px 1px yellow, inset 1px 0px 0px 1px blue;
   }
 
   :global(*:focus) {
