--- a/src/themes/Space/App.styl
+++ b/src/themes/Space/App.styl
@@ -11,7 +11,7 @@
     background-color: dark;
     color: light;
     border: none;
-    box-shadow: inset 0px 0px 0px 1px light;
+    box-shadow: inset 0px 0px 0px 1px gray;
 
   }
   :global(button:hover) {
