--- a/src/themes/Space/App.styl
+++ b/src/themes/Space/App.styl
@@ -51,6 +51,8 @@
 
     overflow: hidden;
     position: relative
+
+    border: 1px solid light
   }
   #content > * {
     border: 8px inset lightgray;
